# x-transformers-rl

./: .gitignore  CLAUDE.md  README.md  README_FRALA.md  README_FRALA_ARC.md  analyze_training.py  check_models.py  compare_models.py  comprehensive_arc_eval.py  comprehensive_demo.py  demo_frala_arc_complete.py  frala_arc.py  frala_config.json  full_training_summary.md  hlip.md  monitor_training.py  pyproject.toml  quick_comparison.py  quick_demo.py  requirements.txt  test_arc_subset.py  test_frala.py  test_single_arc.py  train_fractal_lander.py  train_frala_arc.py  train_frala_full_arc.py  train_frala_real_arc.py  train_lander.py
.github/workflows/: test.yml
arc_experiments/: model_comparison.json
arc_experiments/arc_demo_quick_final/: final_results.json
arc_experiments/full_arc_curriculum_v1/: training_log.json
arc_experiments/full_arc_training/: training_log.json
arc_experiments/real_arc_v1/: comprehensive_evaluation.json  training_log.json
arc_experiments/real_arc_v2_extended/: training_log.json
fractal_experiments/frala_demo_final/: experiment_results.json
fractal_experiments/frala_demo_update_0/: fractal_analysis.json  training_history.json
fractal_experiments/frala_easy_final/: experiment_results.json  final_fractal_agent.pt
fractal_experiments/frala_easy_update_0/: fractal_agent.pt  fractal_analysis.json  training_history.json
templates/: dashboard.html
tests/: test_x_transformers_rl.py
x_transformers_rl/: __init__.py  distributed.py  evolution.py  fractal_agent.py  fractal_rl.py  x_transformers_rl.py
(+3 files in other folders)
